@@ -11,6 +11,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Jason A. Pfeil
   Jörg Krause
   Ben Boeckel
+  Paul J. Fenwick
 
 Thanks to the following, who submitted detailed bug reports and excellent suggestions:
 
