@@ -5,6 +5,8 @@
           (Thanks to Jörg Krause, Ben Boeckel).
 - TW-1845 Cygwin build fails, missing get_current_dir_name
           (thanks to hosaka).
+- TW-1936 Tweak tests to have fuller TAP compliance
+          (thanks to Paul J. Fenwick)
 - Converted to C++11.
 - Improved compliance with CppCoreGuidelines.
 - Integated common CMake CXX module.
